@@ -1,3 +1,8 @@
+2008-10-10  Pedro Alves  <pedro@codesourcery.com>
+
+	* remote.c (remote_start_remote): Always tell the stub if we're in
+	extended-remote.
+
 2008-10-09  Pedro Alves  <pedro@codesourcery.com>
 
 	* remote.c (remote_wait): Rename to...
